Minor modifications + cleaning

--- a/backward_disentangling.tex
+++ b/backward_disentangling.tex
@@ -711,9 +711,9 @@ Combining this definition with Lemma~\ref{lemma:three:identities}, we may expres
 \end{multline*}
 Now, applying Lemmas~\ref{lem:geo:bound} and \ref{lem:diff:bound} to the previous decomposition yields
 $$
-\left| \postmod{0:n} \addf[n]{k} - \post{0:n} \addf[n]{k} \right| \leq 2 c(\theta,\varphi) \frac{\udup }{\udlow^2} \sum_{k = 0}^{n - 1} \| \addf{k} \|_\infty \left( \sum_{m = 1}^{n - 1} \rho^{|k - m| - 1} + 1 \right).  
+\left| \postmod{0:n} \addf[n]{k} - \post{0:n}^\theta \addf[n]{k} \right| \leq 2 c(\theta,\varphi) \frac{\udup }{\udlow^2} \sum_{k = 0}^{n - 1} \| \addf{k} \|_\infty \left( \sum_{m = 1}^{n - 1} \rho^{|k - m| - 1} + 1 \right),
 $$
-which was to be established. 
+which concludes the proof. 
 
 
 \medskip
